still trying to fix the z-index for cards on mobile... Might be due to 3d ratate

--- a/styles.css
+++ b/styles.css
@@ -168,8 +168,6 @@ html {
   border-radius: 10px;
   height: 180px;
   width: 120px;
-  position: relative;
-  z-index: -1;
   transform: rotate3d(1, 1, 1, -2deg);
 }
 .game-card-bank {
@@ -187,6 +185,7 @@ html {
   .game-card {
     height: 142.5px;
     width: 95px;
+    transform: translate3d(0, 0, 0);
   }
 }
 .spade {
